test_yuriiq/catalog/language/german/checkout/manual.php
<?php

// text
$_['text_success']	= 'Auftragssummen wurde erfolgreich neu berechnet!';
$_['text_for']	= '%s Gift Certificate for %s**';

// error
$_['error_stock']	= 'Produkte mit *** gekennzeichnet sind, sind nicht in der gewünschten Menge oder nicht auf Lager!';
$_['error_amount']	= 'Betrag muss zwischen %s und %s!';
$_['error_shipping']	= 'Achtung: Versandverfahren notwendig!';
$_['error_country']	= 'Bitte wählen Sie ein Land!';
$_['error_postcode']	= 'Postleitzahl muss zwischen 2 und 10 Zeichen lang sein!';
$_['error_to_name']	= 'Empfänger-Name muss zwischen 1 und 64 Zeichen lang sein!';
$_['error_minimum']	= 'Mindestbestellmenge für %s ist %s!';
$_['error_points']	= 'Warning: You don\'t have points';
$_['error_voucher']	= 'Warning: Gift Voucher is either invalid or the balance has been used up!**';
$_['error_no_shipping']	= 'Warnung: Keine Versandarten sind verfügbar!';
$_['error_warning']	= 'Achtung: Bitte überprüfen Sie das Formular sorgfältig auf Fehler!';
$_['error_coupon']	= 'Warning: Coupon is either invalid, expired or reached it';
$_['error_reward']	= 'Warning: Please enter the amount of reward points to use!**';
$_['error_customer']	= 'Warnung: Kann nicht ausgewählten Kunden zu finden!';
$_['error_required']	= '%s erforderlich!';
$_['error_email']	= 'EMail-Adresse scheint nicht gültig zu sein!';
$_['error_payment']	= 'Achtung: Zahlungsmethode erforderlich!';
$_['error_zone']	= 'Bitte wählen Sie eine Region / Staat!';
$_['error_no_payment']	= 'Warnung: Keine Zahlungsmöglichkeiten stehen zur Verfügung!';
$_['error_maximum']	= 'Warning: The maximum number of points that can be applied is %s!**';
$_['error_permission']	= 'Sie haben nicht die Berechtigung, diese Seite zu besuchen, bitte an den Systemadministrator zu verweisen.';
$_['error_from_name']	= 'Ihr Name muss zwischen 1 und 64 Zeichen lang sein!';
?>